--- a/src/Aspire.Dashboard/Components/Controls/AspireMenuButton.razor
+++ b/src/Aspire.Dashboard/Components/Controls/AspireMenuButton.razor
@@ -24,7 +24,7 @@
         }
         else
         {
-            <FluentMenuItem OnClick="() => HandleItemClicked(item)" title="@item.Tooltip">
+            <FluentMenuItem OnClick="() => HandleItemClicked(item)" title="@item.Tooltip" Disabled="@item.IsDisabled">
                 @item.Text
                 @if (item.Icon != null)
                 {
